# hands-on-llms

./: .gitignore
modules/financial_bot/: Makefile  pyproject.toml  requirements.txt
modules/financial_bot/evalbaseline/: results.txt  results_with_2_augmantetions.txt  results_with_compressed_history.txt  results_with_history.txt  results_with_rephrased_questions.txt  run_with_history_summarization_prompt_only  run_with_history_summary_and_rephrasing_prompt  run_with_rephrasing_prompt_only  scores_run_with_2_augmantetions.txt
modules/financial_bot/financial_bot/: chains.py  langchain_bot.py  models.py  template.py  utils.py
modules/financial_bot/notebooks/: eval_graphs.ipynb  merged_descriptive_statistics.csv
modules/financial_bot/tools/: bot.py  bot_eval.py  ui.py
modules/q_and_a_dataset_generator/data/: training_data.json
modules/training_pipeline/: Makefile
modules/training_pipeline/dataset/: testing_data_with_history.json
