[tool.poetry]
name = "financial-bot"
version = "0.1.0"
description = "Financial Bot (Falcon7B-LLM) with Langchain"
authors = ["Joywalker <alexandrurazvant@gmail.com>"]
readme = "README.md"
packages = [{include = "financial_bot"}]

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
qdrant-client = "^1.12.2"
langchain = "^0.3.13"
comet-ml = "^3.47.6"

peft = "^0.4.0"
accelerate = "0.26.0"
python-dotenv = "^1.0.0"
scipy = "^1.11.1"
einops = "^0.6.1"
fire = "^0.5.0"
comet-llm = "^1.1.0"
bitsandbytes = "^0.41.1"
torch = "2.0.1"
beam-sdk = "0.15.9"
gradio = "^3.48.0"
unstructured = "^0.10.28"
llmlingua = "^0.2.2"
langchain-community = "^0.3.13"
openai = "^1.58.1"
ragas = "^0.2.9"
langchain-huggingface = "^0.1.2"
langchain-openai = "^0.2.14"

[tool.poetry.group.dev.dependencies]
black = "^23.7.0"
ruff = "^0.0.285"
datasets = "2.14.5"

[[tool.poetry.source]]
name = "torch"
url = "https://download.pytorch.org/whl/cu118"
priority = "supplemental"


[[tool.poetry.source]]
name = "PyPI"
priority = "primary"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.ruff]
line-length = 120
target-version = "py310"

[tool.ruff.isort]
case-sensitive = true
